--- a/italienwebsite/style.css
+++ b/italienwebsite/style.css
@@ -1,13 +1,15 @@
-body {
-    margin: 0 auto;
-    padding: 0;
-    background-color: #F4EEE1;
-    overflow-x: hidden;
+/* ---------------- GENERELT ----------------*/
+*,
+html * {
+    box-sizing: border-box;
 }
 
-img {
-    width: 100%;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #F4EEE1;
 }
+
 
 a,
 h1,
@@ -16,53 +18,77 @@ p {
     font-family: 'Raleway', sans-serif;
 }
 
+/* ---------------- GENERELT ----------------*/
+/* ---------------- COVER ----------------*/
+.cover {
+    background-image: url("cover.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 35vw;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
+/* ---------------- COVER ----------------*/
+/* ---------------- KNAPPER ----------------*/
+#menu {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 10px 0 50px 15px;
+}
 
+#menu button {
+    width: 160px;
+}
 
+/* ---------------- KNAPPER ----------------*/
+
+/* ---------------- GRID ----------------*/
 #retter {
     display: grid;
-    /*      grid-template-columns: auto;*/
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-    grid-gap: 1vw;
-    max-width: 1000px;
-    margin: 0 auto;
-    justify-content: center;
-    margin-bottom: 100px;
-
-
+    grid-template-columns: 1fr;
+    grid-gap: 2vw;
+    margin: 0 5vw 5vw 5vw;
 }
 
 
 
 .ret {
-
-    text-align: left;
-    padding-bottom: 10px;
-    margin: 30px 30px 30px 30px;
-    text-align: center;
     background-color: white;
-    width: 350px;
-
-
 
 }
 
+.ret img {
+    width: 100%;
+}
+
+.ret p,
+h2 {
+    margin-left: 2vw;
+
+}
+
+/* ---------------- GENERELT ----------------*/
+
+/* ---------------- HEADER ----------------*/
+
+#header {
+    padding: 0.2px 0 0 30px;
+    text-align: left;
+    background-color: #2C3539;
+    height: 80px;
+
+}
 
 #header h1 {
-    display: flex;
-    text-align: left;
-    margin-left: 20px;
+    margin-top: 25px;
     color: whitesmoke;
     font-size: 25px;
 }
 
-#header {
-    padding: 0.6px;
-    text-align: center;
-    background-color: #2C3539;
-
-}
-
+/* ---------------- HEADER ----------------*/
+/* ---------------- STICKY ----------------*/
 .content {
     padding: 10px;
 }
@@ -77,11 +103,18 @@ p {
     padding-top: 10px;
 }
 
+/* ---------------- STICKY ----------------*/
+/* ---------------- TEKSTER ----------------*/
+
 .tekst {
-    text-align: center;
-    margin: 40px 10px 5px 10px;
+    text-align: left;
+    margin: 30px 15px 5px 15px;
     font-size: 1rem;
 }
+
+
+/* ---------------- TEKSTER ----------------*/
+/* ---------------- STYLING PÅ KNAPPER ----------------*/
 
 button {
     background-color: #2C3539;
@@ -102,30 +135,13 @@ button {
 
 }
 
-#menu {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-}
+/* ---------------- STYLING PÅ KNAPPER ----------------*/
+/* ---------------- FOOTER ----------------*/
 
-img {
-    width: 350px;
-    height: 350px;
-}
-
-.cover {
-    background-image: url("cover.jpg");
-    background-size: cover;
-    width: 100%;
-    height: 35vw;
-    background-position: center;
-    background-repeat: no-repeat;
-}
 
 footer {
     background-color: #2C3539;
-    height: 100px;
-    width: 100%;
+    min-height: 100px;
     color: white;
     position: inherit;
     bottom: 0;
@@ -134,11 +150,12 @@ footer {
 }
 
 footer p {
-    text-align: left;
-
     line-height: 25px;
 
 }
+
+/* ---------------- FOOTER ----------------*/
+/* ---------------- POPUP ----------------*/
 
 #popup {
     width: 100vw;
@@ -153,7 +170,8 @@ footer p {
     width: 70vw;
     height: 85vh;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.53);
+
     z-index: 1111;
     top: 50%;
     left: 50%;
@@ -163,7 +181,7 @@ footer p {
 #indhold {
     box-sizing: border-box;
     background-color: white;
-    width: 60vw;
+    width: 50vw;
     height: 70vh;
     top: 50%;
     left: 50%;
@@ -176,7 +194,7 @@ footer p {
     object-fit: contain;
     width: 100%;
     height: 300px;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 #luk {
@@ -185,53 +203,48 @@ footer p {
 }
 
 #luk button {
-    font-size: 2em;
+    font-size: 3em;
     background-color: transparent;
     color: white;
 }
 
-
+/* ---------------- POPUP ----------------*/
+/* ---------------- PARALAX ----------------*/
 .parallax {
-    background-image:
+    background-image: url(parallax.JPG);
+    height: 500px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-
+/* ---------------- PARALAX ----------------*/
+/* ---------------- MEDIA ----------------*/
 
 @media only screen and (min-width: 500px) {
     #retter {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
     }
+
+
 
 
 }
 
-@media only screen and (max-width: 500px) {
-
-    #menu {
-        flex-direction: column;
-    }
-
-    #menu button {
-        width: 150px;
-    }
-
-    .ret {
-        margin: 25px;
-        margin-left: 75px;
-    }
-
-}
+@media only screen and (max-width: 500px) {}
 
 
 
 @media only screen and (min-width:800px) {
     #retter {
-        grid-template-columns: auto auto auto;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
     .tekst {
-        text-align: center;
-        margin: 100px 300px 10px 300px;
+        text-align: left;
+        margin: 70px 400px 50px 30px;
+        ;
         font-size: 1.5rem;
     }
 
@@ -241,10 +254,10 @@ footer p {
     }
 
 
+
+
 }
 
-@media only screen and (max-width:800px) {
-    #retter {
-        max-width: 90%;
-    }
-}
+@media only screen and (max-width:800px) {}
+
+/* ---------------- MEDIA ----------------*/
