--- a/italienwebsite/style.css
+++ b/italienwebsite/style.css
@@ -21,7 +21,7 @@ p {
 /* ---------------- GENERELT ----------------*/
 /* ---------------- COVER ----------------*/
 .cover {
-    background-image: url("cover.jpg");
+    background-image: url("coverrettet.jpg");
     background-size: cover;
     width: 100%;
     height: 35vw;
@@ -203,21 +203,27 @@ footer p {
 }
 
 #luk button {
-    font-size: 3em;
+    font-size: 2.5em;
     background-color: transparent;
     color: white;
+    margin-left: 210px;
+
 }
 
 /* ---------------- POPUP ----------------*/
 /* ---------------- PARALAX ----------------*/
 .parallax {
     background-image: url(parallax.JPG);
-    height: 500px;
+    height: 350px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.8;
+
 }
+
+
 
 /* ---------------- PARALAX ----------------*/
 /* ---------------- MEDIA ----------------*/
@@ -230,9 +236,16 @@ footer p {
 
 
 
+
+
 }
 
-@media only screen and (max-width: 500px) {}
+@media only screen and (max-width: 500px) {
+    .parallax {
+        display: none;
+    }
+
+}
 
 
 
@@ -258,6 +271,11 @@ footer p {
 
 }
 
-@media only screen and (max-width:800px) {}
+@media only screen and (max-width:800px) {
+    .parallax {
+        display: none;
+    }
+
+}
 
 /* ---------------- MEDIA ----------------*/
