--- a/05_03_02_sarahdavidsen_italienwebsite/style.css
+++ b/05_03_02_sarahdavidsen_italienwebsite/style.css
@@ -223,7 +223,7 @@ button {
     border-radius: 5%;
 }
 
-button:hover {
+#menu button:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
